--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,8 @@ repository: rantahar/introduction-to-mpi
 email: "j.m.o.rantaharju@swansea.ac.uk"
 
 # Sites.
+sa2c_site: "https://sa2c.swansea.ac.uk/"
+cris_site: "https://chryswoods.com/main/courses.html"
 amy_site: "https://amy.software-carpentry.org/workshops"
 carpentries_github: "https://github.com/carpentries"
 carpentries_pages: "https://carpentries.github.io"
