Replace the software carpentry logo, this is not currently SWC

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # dc: Data Carpentry
 # lc: Library Carpentry
 # cp: Carpentries (to use for instructor traning for instance)
-carpentry: "swc"
+carpentry: "sa2c"
 
 # Overall title for pages.
 title: "Introduction to Parallel Programming with MPI"
