--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ email: "j.m.o.rantaharju@swansea.ac.uk"
 # Sites.
 sa2c_site: "https://sa2c.swansea.ac.uk/"
 pdc_site: "https://www.pdc.kth.se"
+prace_site: "https://prace-ri.eu/"
 amy_site: "https://amy.software-carpentry.org/workshops"
 carpentries_github: "https://github.com/carpentries"
 carpentries_pages: "https://carpentries.github.io"
